--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,28 @@
 /* You can add global styles to this file, and also import other style files */
+* {
+    font-family: Arial, Helvetica, sans-serif; /*letra de todo el proyecto*/
+    font-family: 200; /*tamaño de letra de todo el proyecto*/ 
+  }
+
+  html, body {
+    background: white;
+    margin: 20px; /*Margen del html*/
+    color: black; /*Color de letra*/
+  }
+
+  button {
+    background-color: rgb(50, 121, 121);
+    border-radius: 10px;
+    border: 0px;
+    color: white;
+    cursor: pointer;
+    margin-right: 5px;
+    margin-left: 5px;
+    margin-top: 10px;
+    padding: 5px 10px;
+  }
+
+  input {
+    display: block;
+    margin: 5px;
+  }
